------------------------------------------------------------------------------
Intel(R) Machine Learning Scaling Library 2018 Preview for Linux* OS
Release Notes
------------------------------------------------------------------------------

--------
Contents
--------

- Overview
- What's New
- Key Features
- System Requirements
- Installation Notes
- Documentation
- Special Features and Known Issues
- Copyright and Licenses
- Disclaimer and Legal Information

--------
Overview
--------

Intel(R) Machine Learning Scaling Library (Intel(R) MLSL) is a library providing
an efficient implementation of communication patterns used in deep learning.

    - Built on top of MPI, allows for use of other communication libraries
    - Optimized to drive scalability of communication patterns
    - Works across various interconnects: Intel(R) Omni-Path Architecture,
      InfiniBand*, and Ethernet
    - Common API to support Deep Learning frameworks (Caffe*, Theano*, Torch*,
      etc.)

Intel(R) MLSL package comprises the Intel MLSL Software Development Kit (SDK)
and the Intel(R) MPI Library Runtime components.

----------
What's New
----------

Intel MLSL 2018:
   - Message prioritization (experimental feature).
   - Intel(R) MPI Library runtime updated to version 2018 Update 2.
   - Bug fixes and performance improvements.

Intel MLSL 2017 Update 2:
   - Support for fine-grained tuning of internal launch mechanism
     (see MLSL_SERVER_CREATION_TYPE, MLSL_HOSTNAME_TYPE, MLSL_HOSTNAME).
   - Improved stability.
   - Support for parameter quantization (see a sample file in the package for reference).
   - Intel(R) MPI Library runtime updated to version 2018 Update 1.

Intel MLSL 2017 Update 1:
   - Added Python bindings.
   - Bug fixes.

Intel MLSL 2017
   - Initial release.

Product Contents
----------------
The Intel(R) Machine Learning Scaling Library contains the tools you need
to run programs including scalable process management system (Hydra),