@@ -1,14 +1,17 @@
 /*
- Copyright 2018 Intel Corporation.
+ Copyright 2016-2018 Intel Corporation
  
- This software and the related documents are Intel copyrighted materials, and your use of
- them is governed by the express license under which they were provided to you (License).
- Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
- disclose or transmit this software or the related documents without Intel's prior written
- permission.
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
  
- This software and the related documents are provided as is, with no express or implied
- warranties, other than those that are expressly stated in the License.
+     http://www.apache.org/licenses/LICENSE-2.0
+ 
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
 */
 
 /* Intel(R) MLSL library API usage example and correctness check test */
