@@ -1,5 +1,5 @@
 ------------------------------------------------------------------------------
-Intel(R) Machine Learning Scaling Library 2018 Preview for Linux* OS
+Intel(R) Machine Learning Scaling Library 2018 Update 1 Preview for Linux* OS
 Release Notes
 ------------------------------------------------------------------------------
 
@@ -37,6 +37,12 @@ and the Intel(R) MPI Library Runtime components.
 ----------
 What's New
 ----------
+
+Intel MLSL 2018 Update 1:
+   - Intel(R) MPI Library runtime updated to version 2018 Update 3.
+   - Added support for AllGatherv collective.
+   - Switched to Apache License, Version 2.0.
+   - Bug fixes.
 
 Intel MLSL 2018:
    - Message prioritization (experimental feature).
